--- a/projectHtlp/Base.lproj/Main.storyboard
+++ b/projectHtlp/Base.lproj/Main.storyboard
@@ -91,29 +91,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pr5-7w-ae8">
-                                <rect key="frame" x="0.0" y="0.0" width="160" height="160"/>
-                                <color key="backgroundColor" red="0.40000000600000002" green="1" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Nouvelle annonce"/>
-                                <connections>
-                                    <segue destination="rgD-fA-1g2" kind="show" id="Scm-i5-i1M"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lyn-mb-VBF">
-                                <rect key="frame" x="160" y="0.0" width="160" height="160"/>
-                                <color key="backgroundColor" red="0.80000001190000003" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Recherche"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vi4-4Y-zFd">
-                                <rect key="frame" x="160" y="320" width="160" height="160"/>
-                                <color key="backgroundColor" red="1" green="0.50196081400000003" blue="0.0" alpha="0.47586206896551725" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Notifications"/>
-                            </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fond" translatesAutoresizingMaskIntoConstraints="NO" id="9Nw-P1-5uu">
-                                <rect key="frame" x="0.0" y="159" width="320" height="162"/>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0ta-um-K38">
-                                <rect key="frame" x="10" y="246" width="140" height="30"/>
+                                <rect key="frame" x="15" y="67" width="140" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Retour main">
                                     <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -123,7 +102,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3sQ-sX-Van">
-                                <rect key="frame" x="132" y="235" width="217" height="30"/>
+                                <rect key="frame" x="6" y="105" width="217" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="ajouter catégories">
                                     <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -132,17 +111,41 @@
                                     <segue destination="w1y-jr-zWK" kind="show" id="lbP-io-qV3"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FCD-Qe-upC">
-                                <rect key="frame" x="0.0" y="320" width="160" height="160"/>
-                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="0.38620689655172413" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Mon compte"/>
-                            </button>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wbc-Ag-cGL">
+                                <rect key="frame" x="0.0" y="436" width="320" height="44"/>
+                                <items>
+                                    <barButtonItem image="user" id="mQF-M3-s9k"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="xay-DQ-1OL"/>
+                                    <barButtonItem image="add" id="cYN-s3-zrP">
+                                        <connections>
+                                            <segue destination="rgD-fA-1g2" kind="show" id="ON6-hw-Tau"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="LVF-uX-O0J"/>
+                                    <barButtonItem image="alarm_empty" id="jS7-pv-1RQ"/>
+                                </items>
+                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                            </toolbar>
+                            <searchBar contentMode="redraw" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aiM-WZ-IU6">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="aiM-WZ-IU6" firstAttribute="leading" secondItem="sg8-ia-J4e" secondAttribute="leadingMargin" constant="-20" id="0Qr-Gd-Tfu"/>
+                            <constraint firstItem="Wbc-Ag-cGL" firstAttribute="leading" secondItem="sg8-ia-J4e" secondAttribute="leadingMargin" constant="-20" id="dHd-vo-SbU"/>
+                            <constraint firstItem="cTO-yU-O3S" firstAttribute="top" secondItem="Wbc-Ag-cGL" secondAttribute="bottom" id="dkg-re-dLJ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="aiM-WZ-IU6" secondAttribute="trailing" constant="-20" id="pl6-hC-dqC"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Wbc-Ag-cGL" secondAttribute="trailing" constant="-20" id="vRw-DI-thV"/>
+                            <constraint firstItem="aiM-WZ-IU6" firstAttribute="top" secondItem="Iu5-5F-Gih" secondAttribute="bottom" id="y2n-X7-gTz"/>
+                        </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
-                        <outlet property="newAnnounce" destination="pr5-7w-ae8" id="je5-vk-QsX"/>
+                        <outlet property="moncompteBar" destination="mQF-M3-s9k" id="ZOV-Y3-n8m"/>
+                        <outlet property="newAnnounceBar" destination="cYN-s3-zrP" id="1XB-eR-W28"/>
+                        <outlet property="notifBar" destination="jS7-pv-1RQ" id="m6P-Uo-2D6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A6P-I9-ljM" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -218,7 +221,7 @@
                         <viewControllerLayoutGuide type="bottom" id="Dwn-8D-dx8"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="MQK-Jt-Fb8">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9eu-iS-CcT">
@@ -532,10 +535,12 @@
         </scene>
     </scenes>
     <resources>
-        <image name="fond" width="800" height="600"/>
+        <image name="add" width="48" height="48"/>
+        <image name="alarm_empty" width="48" height="48"/>
+        <image name="user" width="48" height="48"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="WDc-4o-WhT"/>
         <segue reference="qsO-TL-m9W"/>
+        <segue reference="ckS-mb-4QJ"/>
     </inferredMetricsTieBreakers>
 </document>
