--- a/projectHtlp/Base.lproj/Main.storyboard
+++ b/projectHtlp/Base.lproj/Main.storyboard
@@ -91,6 +91,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wbc-Ag-cGL">
+                                <rect key="frame" x="0.0" y="436" width="320" height="44"/>
+                                <items>
+                                    <barButtonItem image="user" id="mQF-M3-s9k">
+                                        <color key="tintColor" red="0.52234006876630401" green="0.8093300065445026" blue="0.45759091143732861" alpha="1" colorSpace="calibratedRGB"/>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="xay-DQ-1OL"/>
+                                    <barButtonItem image="add" id="cYN-s3-zrP">
+                                        <color key="tintColor" red="0.2575681091253243" green="0.70287883998607903" blue="0.8093300065445026" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <segue destination="rgD-fA-1g2" kind="show" id="ON6-hw-Tau"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="LVF-uX-O0J"/>
+                                    <barButtonItem image="alarm_empty" id="jS7-pv-1RQ"/>
+                                </items>
+                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                            </toolbar>
+                            <searchBar contentMode="redraw" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aiM-WZ-IU6">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <color key="barTintColor" red="1" green="0.81803584186373757" blue="0.43520865481209736" alpha="1" colorSpace="calibratedRGB"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0ta-um-K38">
                                 <rect key="frame" x="15" y="67" width="140" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
@@ -111,32 +134,50 @@
                                     <segue destination="w1y-jr-zWK" kind="show" id="lbP-io-qV3"/>
                                 </connections>
                             </button>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wbc-Ag-cGL">
-                                <rect key="frame" x="0.0" y="436" width="320" height="44"/>
-                                <items>
-                                    <barButtonItem image="user" id="mQF-M3-s9k"/>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="xay-DQ-1OL"/>
-                                    <barButtonItem image="add" id="cYN-s3-zrP">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" indicatorStyle="white" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Fbi-FL-Sg5">
+                                <rect key="frame" x="3" y="67" width="315" height="372"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="jmr-0X-vff">
+                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Jules" id="gxk-Mw-46C" customClass="CategoryViewCellCollectionViewCell" customModule="projectHtlp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fYL-Ag-rYh">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
                                         <connections>
-                                            <segue destination="rgD-fA-1g2" kind="show" id="ON6-hw-Tau"/>
+                                            <outlet property="icon" destination="fYL-Ag-rYh" id="rbI-zg-HYj"/>
                                         </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="LVF-uX-O0J"/>
-                                    <barButtonItem image="alarm_empty" id="jS7-pv-1RQ"/>
-                                </items>
-                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                            </toolbar>
-                            <searchBar contentMode="redraw" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aiM-WZ-IU6">
-                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="emX-Ul-OMB" id="IYO-o2-CuC"/>
+                                    <outlet property="delegate" destination="emX-Ul-OMB" id="S2f-Hz-imc"/>
+                                </connections>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="aiM-WZ-IU6" firstAttribute="leading" secondItem="sg8-ia-J4e" secondAttribute="leadingMargin" constant="-20" id="0Qr-Gd-Tfu"/>
+                            <constraint firstItem="Fbi-FL-Sg5" firstAttribute="leading" secondItem="sg8-ia-J4e" secondAttribute="leadingMargin" constant="-20" id="BdH-Vf-xLH"/>
+                            <constraint firstItem="Wbc-Ag-cGL" firstAttribute="top" secondItem="Fbi-FL-Sg5" secondAttribute="bottom" id="Pda-6w-43g"/>
+                            <constraint firstItem="Fbi-FL-Sg5" firstAttribute="top" secondItem="aiM-WZ-IU6" secondAttribute="bottom" id="XcI-Ik-ZHu"/>
                             <constraint firstItem="Wbc-Ag-cGL" firstAttribute="leading" secondItem="sg8-ia-J4e" secondAttribute="leadingMargin" constant="-20" id="dHd-vo-SbU"/>
                             <constraint firstItem="cTO-yU-O3S" firstAttribute="top" secondItem="Wbc-Ag-cGL" secondAttribute="bottom" id="dkg-re-dLJ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="aiM-WZ-IU6" secondAttribute="trailing" constant="-20" id="pl6-hC-dqC"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Fbi-FL-Sg5" secondAttribute="trailing" constant="-15" id="t9U-PP-Rjc"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Wbc-Ag-cGL" secondAttribute="trailing" constant="-20" id="vRw-DI-thV"/>
                             <constraint firstItem="aiM-WZ-IU6" firstAttribute="top" secondItem="Iu5-5F-Gih" secondAttribute="bottom" id="y2n-X7-gTz"/>
                         </constraints>
